Inclusión de campo de texto
.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div>
             <p class="greeting-id">The ID is </p>
             <p class="greeting-content">The content is </p>
+            <input type="text" id="txt_name"  />
             <input id = "btnSubmit" type="submit" value="Release"/>
         </div>
     </body>
