Función de resta en navegador
.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <body>
         <div>
-            <p class="greeting-id">The ID is </p>
-            <p class="greeting-content">The content is </p>
-            <input type="text" id="txt_name"  />
-            <input id = "btnSubmit" type="submit" value="Release"/>
+            <p>Resultado <span id = "resultado_text">.</span></p>
+            <input type="text" id="txt_A"  />
+            <input type="text" id="txt_B"  />
+            <input id = "Suma" type="submit" value="Sumar"/>
         </div>
     </body>
 </html>
