App suma y resta
GET y POST

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <input type="text" id="txt_A"  />
             <input type="text" id="txt_B"  />
             <input id = "Suma" type="submit" value="Sumar"/>
+            <input id = "Resta" type="submit" value="Restar"/>
         </div>
     </body>
 </html>
